// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin should create a choice for a question of a not owned inactive survey 1`] = `
Object {
  "choice": Object {
    "label": "New label",
  },
}
`;

exports[`Admin should create a choice for a question of an inactive survey without providing code 1`] = `
Object {
  "choice": Object {
    "label": "New label",
  },
}
`;

exports[`Admin should create a choice for a question of an owned inactive survey 1`] = `
Object {
  "choice": Object {
    "label": "New label",
  },
}
`;

exports[`Admin should create a choice question for a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": null,
    "choices": null,
    "description": "New description",
    "items": null,
    "type": "CHOICE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a choice question for an owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": null,
    "choices": null,
    "description": "New description",
    "items": null,
    "type": "CHOICE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a dislike question for a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "dislikeIcon": null,
    "items": null,
    "likeIcon": null,
    "type": "LIKEDISLIKE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a dislike question for an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "dislikeIcon": null,
    "items": null,
    "likeIcon": null,
    "type": "LIKEDISLIKE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a favorite question for a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "type": "FAVORITE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a favorite question for an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "type": "FAVORITE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a label for a question of a not owned inactive survey 1`] = `
Object {
  "label": Object {
    "label": "New label",
    "value": 3,
  },
}
`;

exports[`Admin should create a label for a question of an owned inactive survey 1`] = `
Object {
  "label": Object {
    "label": "New label",
    "value": 3,
  },
}
`;

exports[`Admin should create a like question for a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "likeIcon": null,
    "type": "LIKE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a like question for an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "likeIcon": null,
    "type": "LIKE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a new version when creating choice and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when creating item and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when creating label and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when creating question and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when deleting choice and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when deleting item and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when deleting label and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when deleting question and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when updating choice and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when updating item and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when updating label and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a new version when updating question and votes are present 1`] = `
Object {
  "versions": Array [
    Object {
      "versionNumber": 1,
    },
    Object {
      "versionNumber": 2,
    },
    Object {
      "versionNumber": 3,
    },
    Object {
      "versionNumber": 4,
    },
    Object {
      "versionNumber": 5,
    },
  ],
}
`;

exports[`Admin should create a question for an inactive survey with empty description 1`] = `
Object {
  "question": Object {
    "description": null,
    "items": null,
    "likeIcon": null,
    "type": "LIKE",
    "value": "New value",
  },
}
`;

exports[`Admin should create a question for an inactive survey with empty value 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "likeIcon": null,
    "type": "LIKE",
    "value": null,
  },
}
`;

exports[`Admin should create a ranking question for a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "type": "RANKING",
    "value": "New value",
  },
}
`;

exports[`Admin should create a ranking question for an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "type": "RANKING",
    "value": "New value",
  },
}
`;

exports[`Admin should create a regulator question for a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "labels": null,
    "max": 10,
    "min": 0,
    "regulatorDefault": 5,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "New value",
  },
}
`;

exports[`Admin should create a regulator question for an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New description",
    "items": null,
    "labels": null,
    "max": 10,
    "min": 0,
    "regulatorDefault": 5,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "New value",
  },
}
`;

exports[`Admin should create an item for a question of a not owned inactive survey 1`] = `
Object {
  "item": Object {
    "label": "New item",
  },
}
`;

exports[`Admin should create an item for a question of an owned inactive survey 1`] = `
Object {
  "item": Object {
    "label": "New item",
  },
}
`;

exports[`Admin should reset question when changing type 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "495103000d697a14339dfa1ad261e234ff885239e9e3b4b95a7d5f45e9d90cb6",
    "items": null,
    "labels": null,
    "max": 10,
    "min": 0,
    "regulatorDefault": 5,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie viel Obst essen Sie am Tag?",
  },
}
`;

exports[`Admin should update choiceDefault of a choice question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": "df3f765955894956d9c20b3766101afa849bf7c99feb8e3306cc9f26f1aab536",
    "choices": Array [
      Object {
        "id": "f1c518ccc9e3b40597fb0bb30e50a3ba85190509258a3cf37a0c3787dbfded56",
        "label": "Gar nichts",
      },
      Object {
        "id": "53ef111b84b7ba9ed65a20d7f3d89f206f2db24f666b643020e546dc6f27d05e",
        "label": "Weniger als 10 Euro",
      },
      Object {
        "id": "7bf26f63130720b0b9e2479c0d2647266ebad86ab40e9dd161fd44c7d944e683",
        "label": "Mehr als 10 Euro und weniger als 20 Euro",
      },
      Object {
        "id": "df3f765955894956d9c20b3766101afa849bf7c99feb8e3306cc9f26f1aab536",
        "label": "Mehr als 20 Euro",
      },
    ],
    "description": null,
    "id": "544920d8dc19d59ca0fdeaeff0f127935d490d31e6c9147223489168d963bf8f",
    "items": Array [
      Object {
        "id": "7ba13e570a78fe4742fa6ed4857fe7916987054017bc1da2cd64cdfafda7e84b",
        "label": "Bananen",
      },
      Object {
        "id": "93465ab5111d8fb6833705ff4b3387f59d5209fe6f419a2afab8ce1977221b6d",
        "label": "Äpfel",
      },
      Object {
        "id": "7fc024bd0c14ffec77bd24bcc1dc978fd3dceaee2a56e861213d78e4a2cd3ef5",
        "label": "Kiwis",
      },
    ],
    "type": "CHOICE",
    "value": "Wie viel geben Sie für Obst in der Woche aus?",
  },
}
`;

exports[`Admin should update choiceDefault of a choice question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": "5a405fa4d84192804831a75d402e38e0391b68e83eab31dcca9c8c3b183463ee",
    "choices": Array [
      Object {
        "id": "68a8ff5ea7423d040953576dbf3620b26a528c01155df31aa71be93620d7a317",
        "label": "Niemals",
      },
      Object {
        "id": "939c56cfdd6843243d971903928a163de55426918b9c4a346b24b3c461b462bf",
        "label": "1",
      },
      Object {
        "id": "5a405fa4d84192804831a75d402e38e0391b68e83eab31dcca9c8c3b183463ee",
        "label": "2",
      },
      Object {
        "id": "f44107f35b11624e2013bce4f21d078e66fec34d09aa1c8d7da467863b6e0e0d",
        "label": "3",
      },
      Object {
        "id": "e3280bf98f5609702897cb54c4fd85e96b761037bbd92c67178be39a5fc64584",
        "label": "4",
      },
      Object {
        "id": "904f3c8ea880b0f1be79f3a7fa422526ef6df43e2a93e0eb37edf8e772bf0787",
        "label": "Mehr als 4",
      },
    ],
    "description": null,
    "id": "6150c997e679eba9aaeb6e44d8107e43f45ef91c37a150c2fdc00525f3e62a72",
    "items": null,
    "type": "CHOICE",
    "value": "Wie oft sind Sie durchschnittlich pro Woche in der Hochschule?",
  },
}
`;

exports[`Admin should update choiceOrder of a choice question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": null,
    "choices": Array [
      Object {
        "id": "df3f765955894956d9c20b3766101afa849bf7c99feb8e3306cc9f26f1aab536",
        "label": "Mehr als 20 Euro",
      },
      Object {
        "id": "7bf26f63130720b0b9e2479c0d2647266ebad86ab40e9dd161fd44c7d944e683",
        "label": "Mehr als 10 Euro und weniger als 20 Euro",
      },
      Object {
        "id": "53ef111b84b7ba9ed65a20d7f3d89f206f2db24f666b643020e546dc6f27d05e",
        "label": "Weniger als 10 Euro",
      },
      Object {
        "id": "f1c518ccc9e3b40597fb0bb30e50a3ba85190509258a3cf37a0c3787dbfded56",
        "label": "Gar nichts",
      },
    ],
    "description": null,
    "id": "544920d8dc19d59ca0fdeaeff0f127935d490d31e6c9147223489168d963bf8f",
    "items": Array [
      Object {
        "id": "7ba13e570a78fe4742fa6ed4857fe7916987054017bc1da2cd64cdfafda7e84b",
        "label": "Bananen",
      },
      Object {
        "id": "93465ab5111d8fb6833705ff4b3387f59d5209fe6f419a2afab8ce1977221b6d",
        "label": "Äpfel",
      },
      Object {
        "id": "7fc024bd0c14ffec77bd24bcc1dc978fd3dceaee2a56e861213d78e4a2cd3ef5",
        "label": "Kiwis",
      },
    ],
    "type": "CHOICE",
    "value": "Wie viel geben Sie für Obst in der Woche aus?",
  },
}
`;

exports[`Admin should update choiceOrder of a choice question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": null,
    "choices": Array [
      Object {
        "id": "904f3c8ea880b0f1be79f3a7fa422526ef6df43e2a93e0eb37edf8e772bf0787",
        "label": "Mehr als 4",
      },
      Object {
        "id": "e3280bf98f5609702897cb54c4fd85e96b761037bbd92c67178be39a5fc64584",
        "label": "4",
      },
      Object {
        "id": "f44107f35b11624e2013bce4f21d078e66fec34d09aa1c8d7da467863b6e0e0d",
        "label": "3",
      },
      Object {
        "id": "5a405fa4d84192804831a75d402e38e0391b68e83eab31dcca9c8c3b183463ee",
        "label": "2",
      },
      Object {
        "id": "939c56cfdd6843243d971903928a163de55426918b9c4a346b24b3c461b462bf",
        "label": "1",
      },
      Object {
        "id": "68a8ff5ea7423d040953576dbf3620b26a528c01155df31aa71be93620d7a317",
        "label": "Niemals",
      },
    ],
    "description": null,
    "id": "6150c997e679eba9aaeb6e44d8107e43f45ef91c37a150c2fdc00525f3e62a72",
    "items": null,
    "type": "CHOICE",
    "value": "Wie oft sind Sie durchschnittlich pro Woche in der Hochschule?",
  },
}
`;

exports[`Admin should update code of a choice of a question of a not owned inactive survey 1`] = `
Object {
  "choice": Object {
    "code": "X",
    "id": "53ef111b84b7ba9ed65a20d7f3d89f206f2db24f666b643020e546dc6f27d05e",
    "label": "Weniger als 10 Euro",
  },
}
`;

exports[`Admin should update code of a choice of a question of an owned inactive survey 1`] = `
Object {
  "choice": Object {
    "code": "X",
    "id": "68a8ff5ea7423d040953576dbf3620b26a528c01155df31aa71be93620d7a317",
    "label": "Niemals",
  },
}
`;

exports[`Admin should update description of a question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New title",
    "id": "f0a5499c989ef2579982d362d8c374ec3c6f9f3ec34ee0a9204b58b26f616219",
    "items": Array [
      Object {
        "id": "89b3f4856c96532f07f2d73ea8c52b3397cb88823ded39df6806ca52cf54448d",
        "label": "Kirschen",
      },
    ],
    "likeIcon": null,
    "type": "LIKE",
    "value": "Wie gefallen Ihnen diese Kirschen?",
  },
}
`;

exports[`Admin should update description of a question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": "New title",
    "id": "1bb94534c8e18ea82a7cb685edb89b018a14792f36797faa7c3e3bc877b38a44",
    "items": null,
    "likeIcon": null,
    "type": "LIKE",
    "value": "Sind Sie Student der TH Köln?",
  },
}
`;

exports[`Admin should update itemOrder of a question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "dislikeIcon": null,
    "id": "5f98baec8f2b489c8e87eab79f7adf490f54e3b08f7878599d77164124ad1795",
    "items": Array [
      Object {
        "id": "8c150f3cba881448b0e040a9028401832e5939c6d1b0edc6b554250bcab722b3",
        "label": "Äpfel",
      },
      Object {
        "id": "85364e27150cbeae660171c5ed215beb7bd2d21ba676f8fe6b93dec301d85471",
        "label": "Kirschen",
      },
    ],
    "likeIcon": null,
    "type": "LIKEDISLIKE",
    "value": "Essen Sie gerne Obst?",
  },
}
`;

exports[`Admin should update itemOrder of a question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "dislikeIcon": null,
    "id": "0cbb7f5ba03e09d8fd3316b1772d66ff58c081bb9c1850990cff4bfac9a23bc3",
    "items": Array [
      Object {
        "id": "b10aa54a8eec729a3044054a424ed876c11cb2b12da117f5a8a5e267ce2fdbf4",
        "label": "Küche",
      },
      Object {
        "id": "a77e6b62859318e15bb9454dbedaaa26b1de703c8a886c971f10cc9bff983e44",
        "label": "Mensa",
      },
    ],
    "likeIcon": null,
    "type": "LIKEDISLIKE",
    "value": "Sind Sie zufrieden mit der Mensa am Campus Gummersbach?",
  },
}
`;

exports[`Admin should update label of a choice of a question of a not owned inactive survey 1`] = `
Object {
  "choice": Object {
    "code": "A",
    "id": "53ef111b84b7ba9ed65a20d7f3d89f206f2db24f666b643020e546dc6f27d05e",
    "label": "New label",
  },
}
`;

exports[`Admin should update label of a choice of a question of an owned inactive survey 1`] = `
Object {
  "choice": Object {
    "code": "A",
    "id": "68a8ff5ea7423d040953576dbf3620b26a528c01155df31aa71be93620d7a317",
    "label": "New label",
  },
}
`;

exports[`Admin should update label of a label of a question of a not owned inactive survey 1`] = `
Object {
  "label": Object {
    "id": "1c92ef7ba6d640400239602696a2517c88aec7904eff1d9765958504dff27ac5",
    "label": "New label",
    "value": 1,
  },
}
`;

exports[`Admin should update label of a label of a question of an owned inactive survey 1`] = `
Object {
  "label": Object {
    "id": "af175f107539fdc4ee12c876ff6daedfd06a1f6a73fcfff7657bd0343b105845",
    "label": "New label",
    "value": 1,
  },
}
`;

exports[`Admin should update label of an item of a question of a not owned inactive survey 1`] = `
Object {
  "item": Object {
    "id": "85364e27150cbeae660171c5ed215beb7bd2d21ba676f8fe6b93dec301d85471",
    "label": "New item",
  },
}
`;

exports[`Admin should update label of an item of a question of an owned inactive survey 1`] = `
Object {
  "item": Object {
    "id": "a77e6b62859318e15bb9454dbedaaa26b1de703c8a886c971f10cc9bff983e44",
    "label": "New item",
  },
}
`;

exports[`Admin should update labelOrder of a regulator question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "495103000d697a14339dfa1ad261e234ff885239e9e3b4b95a7d5f45e9d90cb6",
    "items": null,
    "labels": Array [
      Object {
        "id": "27c6c4a15e80a7d6f31b165637c86d64a32312b7e9560a4c08a5f82f0054ad6e",
        "label": "Sehr viel",
        "value": 5,
      },
      Object {
        "id": "1c92ef7ba6d640400239602696a2517c88aec7904eff1d9765958504dff27ac5",
        "label": "Nichts",
        "value": 1,
      },
    ],
    "max": 5,
    "min": 0,
    "regulatorDefault": 3,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie viel Obst essen Sie am Tag?",
  },
}
`;

exports[`Admin should update labelOrder of a regulator question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "a7eba9cd6d6fb2db96d1b017f233e64a07b7bca182368194081cd94525bcd4d6",
    "items": Array [
      Object {
        "id": "721a605a5bf4cd6aa76e7d34b4a683894d79cabc55f204b989ab6a1bbc9d44ee",
        "label": "Pommes mit Currywurst",
      },
      Object {
        "id": "4a1ce4aa907c59d6a319e65ee755e95e2456531f7a1dade3d519628cc3facf6d",
        "label": "Borscht",
      },
      Object {
        "id": "f3c85aec2cb9d96e7d10af5b1b7121f07bda7a6d8e2be1e0524298dc08beba5d",
        "label": "Paniertes Schollenfilet",
      },
    ],
    "labels": Array [
      Object {
        "id": "d33dc8e406a0a38e6b53e34c9e6d0dc3d73260ac069211631095747a38b290cb",
        "label": "Voll Zufrieden",
        "value": 10,
      },
      Object {
        "id": "d638c7df838b2685f782145fffbdbcd3600eff207f7ca54c576c2b6f117b0c4c",
        "label": "Ganz okay",
        "value": 5,
      },
      Object {
        "id": "af175f107539fdc4ee12c876ff6daedfd06a1f6a73fcfff7657bd0343b105845",
        "label": "Nicht zufrieden :x",
        "value": 1,
      },
    ],
    "max": 10,
    "min": 1,
    "regulatorDefault": 5,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie zufrieden sind Sie mit dem Essen in der Mensa?",
  },
}
`;

exports[`Admin should update max of a regulator question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "495103000d697a14339dfa1ad261e234ff885239e9e3b4b95a7d5f45e9d90cb6",
    "items": null,
    "labels": Array [
      Object {
        "id": "1c92ef7ba6d640400239602696a2517c88aec7904eff1d9765958504dff27ac5",
        "label": "Nichts",
        "value": 1,
      },
      Object {
        "id": "27c6c4a15e80a7d6f31b165637c86d64a32312b7e9560a4c08a5f82f0054ad6e",
        "label": "Sehr viel",
        "value": 5,
      },
    ],
    "max": 20,
    "min": 0,
    "regulatorDefault": 3,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie viel Obst essen Sie am Tag?",
  },
}
`;

exports[`Admin should update max of a regulator question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "a7eba9cd6d6fb2db96d1b017f233e64a07b7bca182368194081cd94525bcd4d6",
    "items": Array [
      Object {
        "id": "721a605a5bf4cd6aa76e7d34b4a683894d79cabc55f204b989ab6a1bbc9d44ee",
        "label": "Pommes mit Currywurst",
      },
      Object {
        "id": "4a1ce4aa907c59d6a319e65ee755e95e2456531f7a1dade3d519628cc3facf6d",
        "label": "Borscht",
      },
      Object {
        "id": "f3c85aec2cb9d96e7d10af5b1b7121f07bda7a6d8e2be1e0524298dc08beba5d",
        "label": "Paniertes Schollenfilet",
      },
    ],
    "labels": Array [
      Object {
        "id": "af175f107539fdc4ee12c876ff6daedfd06a1f6a73fcfff7657bd0343b105845",
        "label": "Nicht zufrieden :x",
        "value": 1,
      },
      Object {
        "id": "d638c7df838b2685f782145fffbdbcd3600eff207f7ca54c576c2b6f117b0c4c",
        "label": "Ganz okay",
        "value": 5,
      },
      Object {
        "id": "d33dc8e406a0a38e6b53e34c9e6d0dc3d73260ac069211631095747a38b290cb",
        "label": "Voll Zufrieden",
        "value": 10,
      },
    ],
    "max": 20,
    "min": 1,
    "regulatorDefault": 5,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie zufrieden sind Sie mit dem Essen in der Mensa?",
  },
}
`;

exports[`Admin should update regulatorDefault of a regulator question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "495103000d697a14339dfa1ad261e234ff885239e9e3b4b95a7d5f45e9d90cb6",
    "items": null,
    "labels": Array [
      Object {
        "id": "1c92ef7ba6d640400239602696a2517c88aec7904eff1d9765958504dff27ac5",
        "label": "Nichts",
        "value": 1,
      },
      Object {
        "id": "27c6c4a15e80a7d6f31b165637c86d64a32312b7e9560a4c08a5f82f0054ad6e",
        "label": "Sehr viel",
        "value": 5,
      },
    ],
    "max": 5,
    "min": 0,
    "regulatorDefault": 4,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie viel Obst essen Sie am Tag?",
  },
}
`;

exports[`Admin should update regulatorDefault of a regulator question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "a7eba9cd6d6fb2db96d1b017f233e64a07b7bca182368194081cd94525bcd4d6",
    "items": Array [
      Object {
        "id": "721a605a5bf4cd6aa76e7d34b4a683894d79cabc55f204b989ab6a1bbc9d44ee",
        "label": "Pommes mit Currywurst",
      },
      Object {
        "id": "4a1ce4aa907c59d6a319e65ee755e95e2456531f7a1dade3d519628cc3facf6d",
        "label": "Borscht",
      },
      Object {
        "id": "f3c85aec2cb9d96e7d10af5b1b7121f07bda7a6d8e2be1e0524298dc08beba5d",
        "label": "Paniertes Schollenfilet",
      },
    ],
    "labels": Array [
      Object {
        "id": "af175f107539fdc4ee12c876ff6daedfd06a1f6a73fcfff7657bd0343b105845",
        "label": "Nicht zufrieden :x",
        "value": 1,
      },
      Object {
        "id": "d638c7df838b2685f782145fffbdbcd3600eff207f7ca54c576c2b6f117b0c4c",
        "label": "Ganz okay",
        "value": 5,
      },
      Object {
        "id": "d33dc8e406a0a38e6b53e34c9e6d0dc3d73260ac069211631095747a38b290cb",
        "label": "Voll Zufrieden",
        "value": 10,
      },
    ],
    "max": 10,
    "min": 1,
    "regulatorDefault": 6,
    "stepSize": 1,
    "type": "REGULATOR",
    "value": "Wie zufrieden sind Sie mit dem Essen in der Mensa?",
  },
}
`;

exports[`Admin should update type of a question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": null,
    "choices": null,
    "description": null,
    "id": "f0a5499c989ef2579982d362d8c374ec3c6f9f3ec34ee0a9204b58b26f616219",
    "items": Array [
      Object {
        "id": "89b3f4856c96532f07f2d73ea8c52b3397cb88823ded39df6806ca52cf54448d",
        "label": "Kirschen",
      },
    ],
    "type": "CHOICE",
    "value": "Wie gefallen Ihnen diese Kirschen?",
  },
}
`;

exports[`Admin should update type of a question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "choiceDefault": null,
    "choices": null,
    "description": null,
    "id": "1bb94534c8e18ea82a7cb685edb89b018a14792f36797faa7c3e3bc877b38a44",
    "items": null,
    "type": "CHOICE",
    "value": "Sind Sie Student der TH Köln?",
  },
}
`;

exports[`Admin should update value of a label of a question of a not owned inactive survey 1`] = `
Object {
  "label": Object {
    "id": "1c92ef7ba6d640400239602696a2517c88aec7904eff1d9765958504dff27ac5",
    "label": "Nichts",
    "value": 3,
  },
}
`;

exports[`Admin should update value of a label of a question of an owned inactive survey 1`] = `
Object {
  "label": Object {
    "id": "af175f107539fdc4ee12c876ff6daedfd06a1f6a73fcfff7657bd0343b105845",
    "label": "Nicht zufrieden :x",
    "value": 3,
  },
}
`;

exports[`Admin should update value of a question of a not owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "f0a5499c989ef2579982d362d8c374ec3c6f9f3ec34ee0a9204b58b26f616219",
    "items": Array [
      Object {
        "id": "89b3f4856c96532f07f2d73ea8c52b3397cb88823ded39df6806ca52cf54448d",
        "label": "Kirschen",
      },
    ],
    "likeIcon": null,
    "type": "LIKE",
    "value": "New title",
  },
}
`;

exports[`Admin should update value of a question of an owned inactive survey 1`] = `
Object {
  "question": Object {
    "description": null,
    "id": "1bb94534c8e18ea82a7cb685edb89b018a14792f36797faa7c3e3bc877b38a44",
    "items": null,
    "likeIcon": null,
    "type": "LIKE",
    "value": "New title",
  },
}
`;
